--- a/stylesheets/desktop/creer_prof.css
+++ b/stylesheets/desktop/creer_prof.css
@@ -6,7 +6,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    height: 100vh;
     width: 100vw;
     overflow-x: hidden;
     align-items: center;
@@ -14,6 +13,7 @@ body {
 }
 
 form {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,18 +26,26 @@ form {
     box-shadow: 0 0 10px #000;  
 }
 
-form h2 {
-    font-size: 1.5rem;
+form h1 {
+    font-size: 2rem;
     font-family: neue_machina_bold;
     color: #000;
     margin-bottom: 20px;
 }
 
-form h3 {
-    font-size: 1.2rem;
-    font-family: neue_machina;
+form h2 {
+    font-size: 1.25rem;
+    font-family: neue_machina_bold;
     color: #000;
-    margin: 0;
+    margin-bottom: 20px;
+}
+
+form h1 {
+    font-size: 1.5rem;
+    font-family: neue_machina_bold;
+    color: #000;
+    margin-bottom: 20px;
+
 }
 
 form input[type="text"]:not(.date) {
@@ -54,22 +62,14 @@ form input[type="text"]:not(.date) {
     margin-top: 20px;
 }
 
-.date {
-    width: 300px;
-    height: 30px;
-    border: none;
-    border-bottom: 1px solid #000;
-    margin-bottom: 20px;
+label   {
     font-size: 1rem;
     font-family: neue_machina;
     color: #000;
-    outline: none;
-    margin-bottom: 20px;
-    margin-top: 20px;
 }
 
 select {
-    width: 300px;
+    width: 250px;
     height: 30px;
     border: none;
     border-bottom: 1px solid #000;
