--- a/stylesheets/desktop/login.css
+++ b/stylesheets/desktop/login.css
@@ -4,7 +4,7 @@
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -55%);
     border-radius: 17px;
     background: #8ACDD7;
     width: 40%;
@@ -124,5 +124,23 @@ body {
     font-size: 2rem;
     text-align: center;
     color: white;
+}
+
+.error {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    margin: 0;
+    color: red;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 20px;
+    font-family: Inter;
+    font-weight: 500;
+    background-color: #FFC0D9;
+    padding: 15px;
+    border : solid red 2px;
+    width: 35%;
+    font-family: neue_machina;
 }
 
