--- a/stylesheets/desktop/soumettre_frequentation.css
+++ b/stylesheets/desktop/soumettre_frequentation.css
@@ -84,6 +84,10 @@ form a {
     
 }
 
+
+@media screen and (min-width: 600px) {
+    
+
 form input[type="radio"] {
     margin: 0 10px 20px 0;
     appearance: none;
@@ -115,6 +119,9 @@ form input[type="radio"]:before {
 form input[type="radio"]:checked:before {
     background: #d296f0;
 }
+
+}   
+
 
 a {
     text-decoration: none;
